# Ahen-db

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/cli/: overview.mdx
examples/basic_implementation/: example_with_a_custom_config.py  example_without_a_custom_config.py
examples/secure_implementation/: .env.example  generate_key.py  secure_example.py
mem0/configs/vector_stores/: skypydb.py
mem0/utils/: factory.py
mem0/vector_stores/: configs.py  skypydb.py
skypydb/: errors.py
skypydb/api/: client.py  dashboard_api.py  reactive_client.py  vector_client.py
skypydb/cli/: cli.py  start_dashboard.py
skypydb/dashboard/app/: layout.tsx
skypydb/dashboard/app/collections/: page.tsx
skypydb/dashboard/app/dashboard/: page.tsx
skypydb/dashboard/app/health/: page.tsx
skypydb/dashboard/app/tables/: page.tsx
skypydb/dashboard/components/: dashboard-provider.tsx
skypydb/database/: __init__.py  vector_db.py
skypydb/database/reactive/: __init__.py  encryption.py  rsysadd.py  rsysdelete.py  rsyssearch.py  utils.py
skypydb/database/reactive/tables/: __init__.py  audit.py  syscreate.py  sysdelete.py  sysget.py
skypydb/database/vector/: __init__.py
skypydb/database/vector/collections/: __init__.py
skypydb/db/: database.py  vector_database.py
skypydb/schema/: schema.py
skypydb/security/: __init__.py  encryption.py
skypydb/server/: dashboard_server.py
skypydb/table/: table.py
